samples/_failures_safe/1761512706_df4d2d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fff82543.c: In function ‘main’:
./samples/SAFE/__tmp_fff82543.c:168:9: error: expected expression at end of input
  168 |         FILE *output_file = fopen(output_filename,
      |         ^~~~
./samples/SAFE/__tmp_fff82543.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fff82543.c:168:9: error: expected declaration or statement at end of input
